PluginManager: try/catch Throwable all the plugin startup stuff
If you loaded an external plugin that throws LinkageErrors it could
cause the client not to start